--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,10 +5,20 @@
   <title>tmpbox</title>
 </head>
 <body>
-  {% if username %}
-  <p>こんにちは、 {{ username }}さん。</p>
-  {% else %}
-  <p><a href="/login">こちらからログインしてください。</a></p>
-  {% endif %}
+  <header>
+    <section class="login-message">
+      {% if user_id %}
+      <p>
+        こんにちは、 {{ display_name }}さん。
+        {% if is_admin %}
+        <a href="/admin">管理者画面はこちら</a>。
+        {% endif %}
+      </p>
+      {% else %}
+      <p><a href="/login">こちらからログインしてください。</a></p>
+      {% endif %}
+    </section>
+
+  </header>
 </body>
 </html>
