issue #8 - モジュールコードを無理やり動かす準備コードをベーステンプレートに移動。

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,6 +4,12 @@
   <meta charset="utf-8">
   <title>{% block title %}{% endblock %} - tmpbox</title>
   <link rel="stylesheet" href="/static/main.css">
+  <script><!--
+    var exports = {};
+    function require(mod_path) {
+      return exports;
+    }
+  --></script>
   {% block additional_head %}{% endblock %}
 </head>
 <body>
