--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -14,6 +14,7 @@
 </head>
 <body>
   <header>
+    <div id="message_area"></div>
     <h1><a href="/">tmpbox</a></h1>
     {% block header %}{% endblock %}
   </header>
