issue #8 - ユーザー登録・編集機能実装完了 issue #10 - セットアップツールが吐き出す設定ファイルのオプション名が全て小文字になるバグを修正

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <header>
-    <div id="message_area"></div>
+    <div id="message_area">{{ message_contents }}</div>
     <h1><a href="/">tmpbox</a></h1>
     {% block header %}{% endblock %}
   </header>
