--- a/src/templates/edit-account.html
+++ b/src/templates/edit-account.html
@@ -7,16 +7,15 @@
 {% endblock %}
 {% block main %}
 <section class="edit account">
-  <form target="/admin/post-account" method="POST" name="account">
-    <input type="hidden" name="new" value="{% if is_new %}1{% else %}0{% endif %}">
+  <form method="POST" name="account">{# このページの URL へ POST する #}
     <table>
       <tr>
         <th>ユーザー ID</th>
         <td>
           {% if is_new %}
-          <input type="text" name="id" value="" maxlength="50" class="user_id">
+          <input type="text" name="id" value="{% if target_user %}{{ target_user['user_id'] }}{% endif %}"
+                 maxlength="50" class="user_id">
           {% else %}
-          <input type="hidden" name="id" value="{{ target_user['user_id'] }}">
           {{ target_user["user_id"] }}
           {% endif %}
         </td>
@@ -24,7 +23,7 @@
       <tr>
         <th>表示名</th>
         <td>
-          <input type="text" name="dn" value="{% if not is_new %}{{ target_user['display_name'] }}{% endif %}"
+          <input type="text" name="dn" value="{% if target_user %}{{ target_user['display_name'] }}{% endif %}"
                  maxlength="100" class="display_name">
         </td>
       </tr>
@@ -34,14 +33,22 @@
           {% if is_new %}
           新規登録時はパスワードを自動生成します (登録完了時に表示します)。
           {% else %}
-          <label for="password_reset_no">
-            <input type="radio" name="pwr" value="0" checked="checked" id="password_reset_no">
-            変更しない
-          </label>
-          <label for="password_reset_yes">
-            <input type="radio" name="pwr" value="1" id="password_reset_yes">
-            リセットする (自動生成)
-          </label>
+          {%   if is_new_password %}
+          <p>
+            自動生成パスワード: <code class="new_password">{{ password }}</code><br>
+            (ユーザーにお伝えし、速やかに変更するようご案内願います…)
+          </p>
+          {%   endif %}
+          <p>
+            <label for="password_reset_no">
+              <input type="radio" name="pwr" value="0" checked="checked" id="password_reset_no">
+              変更しない
+            </label>
+            <label for="password_reset_yes">
+              <input type="radio" name="pwr" value="1" id="password_reset_yes">
+              リセットする (自動生成)
+            </label>
+          </p>
           {% endif %}
         </td>
       </tr>
@@ -50,5 +57,10 @@
       <button type="submit">送信</button>
     </p>
   </form>
+</section>
+<section class="navigator">
+  <p>
+    <a href="/admin">管理者ページに戻る</a>
+  </p>
 </section>
 {% endblock %}
