--- a/src/templates/edit-account.html
+++ b/src/templates/edit-account.html
@@ -16,7 +16,7 @@
           <input type="text" name="id" value="{% if target_user %}{{ target_user['user_id'] }}{% endif %}"
                  maxlength="50" class="user_id">
           {% else %}
-          {{ target_user["user_id"] }}
+          <code class="user_id">{{ target_user["user_id"] }}</code>
           {% endif %}
         </td>
       </tr>
