issue #11 - フォーム送受信時にワンタイムトークンを生成・検証するようにした。

--- a/src/templates/edit-account.html
+++ b/src/templates/edit-account.html
@@ -8,6 +8,7 @@
 {% block main %}
 <section class="edit account">
   <form method="POST" name="account">{# このページの URL へ POST する #}
+    <input type="hidden" name="tk" value="{{ form_token }}">
     <table>
       <tr>
         <th>ユーザー ID</th>
