issue #13 - ディレクトリ名も変更できるようにした。ディレクトリ名に使用できる文字種の制限を撤廃。

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -38,7 +38,7 @@
       <td>{{ dir["directory_name"] }}</td>
       <td>{{ dir["create_date"] | dispdate }}</td>
       <td>{{ dir["summary"] | firstline }}</td>
-      <td><a href="/admin/directory/{{ dir["directory_name"] }}">設定...</a></td>
+      <td><a href="/admin/directory/{{ dir["directory_id"] }}">設定...</a></td>
     </tr>
     {% endfor %}
   </table>
