issue #23 - ユーザープロファイル画面を実装。

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,3 +27,13 @@ body {
     background-color: yellow;
   }
 }
+
+section.login-message {
+  nav.menu {
+    float: right;
+  }
+
+  &::after {
+    clear: both;
+  }
+}
