--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,6 +3,9 @@
 {% block header %}
 <section class="login-message">
   {% if user_id %}
+  <nav class="menu">
+    <a href="/profile"><img src="/static/icon-profile-setting.svg" alt="ユーザー設定"></a>
+  </nav>
   <p>
     こんにちは、 {{ display_name }}さん。
     {% if is_admin %}
