--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,6 +5,7 @@
   {% if user_id %}
   <nav class="menu">
     <a href="/profile"><img src="/static/icon-profile-setting.svg" alt="ユーザー設定"></a>
+    <a href="/logout"><img src="/static/icon-logout.svg" alt="ログアウト"></a>
   </nav>
   <p>
     こんにちは、 {{ display_name }}さん。
