--- a/src/templates/edit-directory.html
+++ b/src/templates/edit-directory.html
@@ -9,7 +9,7 @@
 <section class="edit directory">
   <form method="POST" name="directory">{# このページの URL へ POST する #}
     <input type="hidden" name="tk" value="{{ form_token }}">
-    <table>
+    <table class="form">
       <tr>
         <th>ディレクトリ名</th>
         <td>
