--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -9,7 +9,7 @@
 <section class="edit account">
   <form method="POST" name="account">
     <input type="hidden" name="tk" value="{{ form_token }}">
-    <table>
+    <table class="form">
       <tr>
         <th>ユーザー ID</th>
         <td>
