--- a/src/templates/edit-directory.html
+++ b/src/templates/edit-directory.html
@@ -26,7 +26,7 @@
       <tr>
         <th>ディレクトリの説明</th>
         <td>
-          <textarea name="sm" wrap="soft" class="summary">{{ target_dir["summary"] }}</textarea>
+          <textarea name="sm" wrap="soft" class="summary">{{ target_dir["summary"] or "" }}</textarea>
         </td>
       </tr>
       <tr>
